--- a/index.html
+++ b/index.html
@@ -21,17 +21,13 @@
   <link href="./static/css/aos.css" rel="stylesheet">
   -->
 
-  <!--
-  <link href="static/css/bootstrap.min.css" rel="stylesheet">
-  -->
-
   
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js" defer></script>
   <script src="//code.jquery.com/jquery-1.11.1.min.js" defer></script>
 
 
-  <link href="./static/css/main.css" rel="stylesheet">
+  <link href="./static/css/main.css" rel="stylesheet" type="text/css">
   <script src="./static/js/main.js" defer></script>
   
   <!-- Favicon -->
@@ -90,8 +86,8 @@
     </div>
     <p class="name-and-mail me-white-text me-text-center"><span><b>Kevin</b> Gil</span><br>Connect with me</p>
     <div class="social-icons me-text-center">
-      <a href="https://www.facebook.com/kevingil23" target="_blank" class="me-transparent-btn facebook"><svg version="1.1" id="facebook" xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink" x="0px" y="0px" width="50px" height="50px" viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve">
-        <path id="github-icon" d="M204.067,184.692h-43.144v70.426h43.144V462h82.965V254.238h57.882l6.162-69.546h-64.045c0,0,0-25.97,0-39.615c0-16.398,3.303-22.89,19.147-22.89c12.767,0,44.896,0,44.896,0V50c0,0-47.326,0-57.441,0c-61.734,0-89.567,27.179-89.567,79.231C204.067,174.566,204.067,184.692,204.067,184.692z"></path></svg>
+      <a href="https://github.com/kevogil" target="_blank" class="me-transparent-btn github"><svg version="1.1" id="github" xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink" x="0px" y="0px" width="50px" height="50px" viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve">
+        <path id="github-icon" d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z"></path></svg>
       </a>
       <a href="https://linkedin.com/in/kevingil23" target="_blank" class="me-transparent-btn linkedin"><svg version="1.1" id="linkedin" xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink" x="0px" y="0px" width="50px" height="50px" viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve">
         <path id="linkedin-icon" d="M150.65,100.682c0,27.992-22.508,50.683-50.273,50.683s-50.273-22.691-50.273-50.683
