--- a/index.html
+++ b/index.html
@@ -79,6 +79,35 @@
   <!-- End About Me -->
 
 
+  <!-- Projects -->
+  <div class="card">
+    <div class="row">
+      <div class="col-md-4 bg-primary aos-init aos-animate" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500" style="background-image: url(&#39;static/images/forecast_model.gif&#39;); background-size: cover; background-repeat: no-repeat center center-fixed; overflow: hidden">
+        <div class="card-body"></div>
+      </div>
+
+      <div class="col-md-8 aos-init aos-animate" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+        <div class="card-body">
+
+          <div class="h5">
+            <a href="https://github.com/kevogil" style="font-weight: 600">Consolidate multiple files dynamically</a>
+          </div>
+
+          <div class="card-text">
+            <p> Evaluating and optimizing a neural network to predict successful charity funding applications using Deep Learning and hyperparameter tuning. </p>
+            <p><strong> Tools used</strong> &nbsp; : &nbsp; Python, Sklearn, Matplotlib, Neural Networks, Keras, Google Colab</p>
+            <p><strong> Category</strong> &nbsp;: &nbsp; Data Science, Machine Learning, Deep Learning, Optimization</p>
+            <p><strong> Year</strong> &nbsp; &nbsp; : &nbsp; Nov 2021</p>
+          </div>
+          
+        </div>
+      </div>
+
+    </div>
+  </div>
+  <!-- End Projects -->
+
+
   <!-- Contact -->
   <div class="contact module me-turquoise" id="contact">
     <div class="speechBubble me-white-bg" id="speechBubble" style="transform: scale(0);">
