--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <meta name="description" content="This is my custom portfolio.">
    
 
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js" defer></script>
   <script src="//code.jquery.com/jquery-1.11.1.min.js" defer></script>
 
@@ -17,8 +16,9 @@
   <link href="./static/css/aos.css" rel="stylesheet">
   <script async="" src="./static/js/gtm.js"></script>
   <script src="./static/js/all.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="./static/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   
-  
+
   <!-- Favicon -->
   <link rel="icon" href="https://lh3.googleusercontent.com/proxy/_zbyiRrVFch2NIYMZ1GKK7NcQFOzKtpuudWfkcTtwklmE78dBcN2CMmW1XUCfpnaF1BPs6FW8vogssChPkgz7yuZGWaLHMmqNnRM7mHtNwNnjURKb9MZK8W9NKbupyNmNcRwUyoK">
 
