--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 
 
-<body class="me-noselect" id="top">
+<body id="top" data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0">
   
   <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MFZ788R"
@@ -71,31 +71,38 @@
 
 
   <!-- Projects -->
-  <div class="card">
-    <div class="row">
-      <div class="col-md-4 bg-primary aos-init aos-animate" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500" style="background-image: url(&#39;static/images/forecast_model.gif&#39;); background-size: cover; background-repeat: no-repeat center center-fixed; overflow: hidden">
-        <div class="card-body"></div>
-      </div>
+  <div class="section" id="experience">
+    <div class="container cc-experience">
+      <div class="h4 text-center mb-4 title"> Projects</div>
+        <div class="card">
+          <div class="row">
+            <div class="col-md-6 bg-primary aos-init aos-animate" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500" style="background-image: url(&#39;static/images/forecast_model.gif&#39;); background-size: cover; background-repeat: no-repeat center center-fixed; overflow: hidden">
+              <div class="card-body"></div>
+            </div>
 
-      <div class="col-md-8 aos-init aos-animate" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-        <div class="card-body">
+            <div class="col-md-6 aos-init aos-animate" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+              <div class="card-body">
 
-          <div class="h5">
-            <a href="https://github.com/kevogil" style="font-weight: 600">Consolidate multiple files dynamically</a>
+                <div class="h5">
+                  <a href="https://github.com/kevogil" style="font-weight: 600">Consolidate multiple files dynamically</a>
+                </div>
+
+                <div class="card-text">
+                  <p> Evaluating and optimizing a neural network to predict successful charity funding applications using Deep Learning and hyperparameter tuning. </p>
+                  <p><strong> Tools used</strong> &nbsp; : &nbsp; Python, Sklearn, Matplotlib, Neural Networks, Keras, Google Colab</p>
+                  <p><strong> Category</strong> &nbsp;: &nbsp; Data Science, Machine Learning, Deep Learning, Optimization</p>
+                  <p><strong> Year</strong> &nbsp; &nbsp; : &nbsp; Nov 2021</p>
+                </div>
+
+              </div>
+            </div>
+
           </div>
-
-          <div class="card-text">
-            <p> Evaluating and optimizing a neural network to predict successful charity funding applications using Deep Learning and hyperparameter tuning. </p>
-            <p><strong> Tools used</strong> &nbsp; : &nbsp; Python, Sklearn, Matplotlib, Neural Networks, Keras, Google Colab</p>
-            <p><strong> Category</strong> &nbsp;: &nbsp; Data Science, Machine Learning, Deep Learning, Optimization</p>
-            <p><strong> Year</strong> &nbsp; &nbsp; : &nbsp; Nov 2021</p>
-          </div>
-
         </div>
       </div>
-
     </div>
   </div>
+
   <!-- End Projects -->
 
 
