--- a/index.html
+++ b/index.html
@@ -167,11 +167,11 @@
       <!-- Project 1 -->
       <div class="card">
         <div class="row">
-          <div class="col-md-7 bg-primary aos-init aos-animate" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500" style="background-image: url(&#39;static/images/forecast_model.gif&#39;); background-size: cover; background-repeat: no-repeat center center-fixed; overflow: hidden">
+          <div class="col-md-7 bg-primary aos-init aos-animate" data-aos="zoom-out-right" data-aos-offset="50" data-aos-duration="500" style="background-image: url(&#39;static/images/forecast_model.gif&#39;); background-size: cover; background-repeat: no-repeat center center-fixed; overflow: hidden">
             <div class="card-body"></div>
           </div>
 
-          <div class="col-md-5 aos-init aos-animate" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="col-md-5 aos-init aos-animate" data-aos="zoom-out-left" data-aos-offset="50" data-aos-duration="500">
             <div class="card-body">
 
               <div class="h5">
@@ -196,11 +196,11 @@
       <!-- Project 2 -->
       <div class="card">
         <div class="row">
-          <div class="col-md-7 bg-primary aos-init aos-animate" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500" style="background-image: url(&#39;static/images/email_model.gif&#39;); background-size: cover; background-repeat: no-repeat center center-fixed; overflow: hidden">
+          <div class="col-md-7 bg-primary aos-init aos-animate" data-aos="zoom-out-right" data-aos-offset="50" data-aos-duration="500" style="background-image: url(&#39;static/images/email_model.gif&#39;); background-size: cover; background-repeat: no-repeat center center-fixed; overflow: hidden">
             <div class="card-body"></div>
           </div>
 
-          <div class="col-md-5 aos-init aos-animate" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="col-md-5 aos-init aos-animate" data-aos="zoom-out-left" data-aos-offset="50" data-aos-duration="500">
             <div class="card-body">
 
               <div class="h5">
@@ -225,11 +225,11 @@
       <!-- Project 3 -->
       <div class="card">
         <div class="row">
-          <div class="col-md-7 bg-primary aos-init aos-animate" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500" style="background-image: url(&#39;static/images/database_model.gif&#39;); background-size: cover; background-repeat: no-repeat center center-fixed; overflow: hidden">
+          <div class="col-md-7 bg-primary aos-init aos-animate" data-aos="zoom-out-right" data-aos-offset="50" data-aos-duration="500" style="background-image: url(&#39;static/images/database_model.gif&#39;); background-size: cover; background-repeat: no-repeat center center-fixed; overflow: hidden">
             <div class="card-body"></div>
           </div>
 
-          <div class="col-md-5 aos-init aos-animate" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="col-md-5 aos-init aos-animate" data-aos="zoom-out-left" data-aos-offset="50" data-aos-duration="500">
             <div class="card-body">
 
               <div class="h5">
