--- a/index.html
+++ b/index.html
@@ -16,12 +16,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="/static/css/main.css">
 
-  <!-- <link href="./static/css/aos.css" rel="stylesheet"> -->
-  <!-- <script async="" src="./static/js/gtm.js"></script> -->
   <script src="./static/js/main.js"></script>
-  <!-- <script src="./static/js/all.js" crossorigin="anonymous"></script> -->
-  <!-- <script src="./static/js/aos.js"></script> -->
-  <!-- <script src="./static/js/site-core.min.js"></script> -->
 
 
   <!-- Favicon -->
@@ -258,7 +253,7 @@
 
   <!-- Contact -->
   <div class="contact module me-turquoise" id="contact">
-    <div class="speechBubble me-white-bg" id="speechBubble" style="transform: scale(0.75);" data-aos="zoom-in-up">
+    <div class="speechBubble me-white-bg" id="speechBubble" data-aos="zoom-in-up">
       <span>Let's make<br> something <br> <strong>awesome</strong> <br> together</span>
     </div>
     <p class="name-and-mail me-white-text me-text-center"><span><b>Kevin</b> Gil</span><br>kevingil23@gmail.com</p>
@@ -283,7 +278,6 @@
 <script src="./static/js/main.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script> -->
 
 <script>
   AOS.init({
