--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               <div class="h5">Data Analytics Boot Camp</div>
               <h6 style="color: darkgrey;">USC Viterbi School of Engineering | Los Angeles, CA</h6>
               <p> 26-week rigorous program focused on technical skills to solve data problems through Excel, Python, R, JavaScript, SQL Databases, Tableau, as well as data visualization through HTML and CSS.
-                  Beyond technical skills, the course went further into concepts of Big Data as well as machine learning and neural networks.
+                  Beyond technical skills, the course went further into concepts of Big Data as well as machine learning with neural networks.
               </p>
             </div>
           </div>
