--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
           </div>
           <div class="col-md-9 aos-init aos-animate" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
             <div class="card-body">
-              <div class="h5">Data Analytics Boot Camp</div>
+              <div class="h5">Data Science and Analytics Boot Camp</div>
               <h6 style="color: darkgrey;">USC Viterbi School of Engineering | Los Angeles, CA</h6>
-              <p> 26-week rigorous program focused on technical skills to solve data problems through Excel, Python, R, JavaScript, SQL Databases, Tableau, as well as data visualization through HTML and CSS.
-                  Beyond technical skills, the course went further into concepts of Big Data as well as machine learning with neural networks.
+              <p> 24-week intensive program focused on technical programming skills in Python, R, JavaScript, Web Scraping, API Interactions, SQL/NoSQL Databases, ETL, Tableau, Front End Web Visualization, Fundamental Statistics,
+                  Big Data, Machine Learning and Deep Learning.
               </p>
             </div>
           </div>
@@ -115,6 +115,9 @@
             <div class="card-body">
               <div class="h5">Bachelor of Business Administration (BBA) - Accounting</div>
               <h6 style="color: darkgrey;">University of California, Riverside | Riverside, CA</h6>
+              <p> 24-week intensive program focused on technical programming skills in Python, R, JavaScript, Web Scraping, API Interactions, SQL/NoSQL Databases, ETL, Tableau, Front End Web Visualization, Fundamental Statistics,
+                  Big Data, Machine Learning and Deep Learning.
+              </p>
             </div>
           </div>
         </div>
@@ -130,8 +133,8 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
     <!-- <div class="compass" id="compass-decorator" style="transform: rotate(0deg);"></div> -->
 
-    <h2 data-aos="fade-up">SKILLS</h2>
     <div class="container" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom">
+      <h2>SKILLS</h2>
       <div class="row justify-content-center">
         <figure data-aos="slide-left">
           <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100px" height="100px" viewBox="0 0 50 50" style=" fill:#000000;"><path d="M 28.8125 0.03125 L 0.8125 5.34375 C 0.339844 5.433594 0 5.863281 0 6.34375 L 0 43.65625 C 0 44.136719 0.339844 44.566406 0.8125 44.65625 L 28.8125 49.96875 C 28.875 49.980469 28.9375 50 29 50 C 29.230469 50 29.445313 49.929688 29.625 49.78125 C 29.855469 49.589844 30 49.296875 30 49 L 30 1 C 30 0.703125 29.855469 0.410156 29.625 0.21875 C 29.394531 0.0273438 29.105469 -0.0234375 28.8125 0.03125 Z M 32 6 L 32 13 L 34 13 L 34 15 L 32 15 L 32 20 L 34 20 L 34 22 L 32 22 L 32 27 L 34 27 L 34 29 L 32 29 L 32 35 L 34 35 L 34 37 L 32 37 L 32 44 L 47 44 C 48.101563 44 49 43.101563 49 42 L 49 8 C 49 6.898438 48.101563 6 47 6 Z M 36 13 L 44 13 L 44 15 L 36 15 Z M 6.6875 15.6875 L 11.8125 15.6875 L 14.5 21.28125 C 14.710938 21.722656 14.898438 22.265625 15.0625 22.875 L 15.09375 22.875 C 15.199219 22.511719 15.402344 21.941406 15.6875 21.21875 L 18.65625 15.6875 L 23.34375 15.6875 L 17.75 24.9375 L 23.5 34.375 L 18.53125 34.375 L 15.28125 28.28125 C 15.160156 28.054688 15.035156 27.636719 14.90625 27.03125 L 14.875 27.03125 C 14.8125 27.316406 14.664063 27.761719 14.4375 28.34375 L 11.1875 34.375 L 6.1875 34.375 L 12.15625 25.03125 Z M 36 20 L 44 20 L 44 22 L 36 22 Z M 36 27 L 44 27 L 44 29 L 36 29 Z M 36 35 L 44 35 L 44 37 L 36 37 Z"></path></svg>
@@ -142,7 +145,7 @@
           <figcaption>PowerQuery M</figcaption>
         </figure>
         <figure data-aos="slide-left">
-          <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100px" height="100px" viewBox="0 0 50 50" style=" fill:#000000;"><path d="M 24.5 2 C 15.800781 2 14 6.492188 14 9.09375 L 14 14 L 24 14 L 24 15 L 9.09375 15 C 5.792969 15 2 17.601563 2 25 C 2 32.398438 5.792969 35 9.09375 35 L 15 35 L 15 29 C 15 26.800781 16.800781 25 19 25 L 31 25 C 32.699219 25 34 23.699219 34 22 L 34 9.09375 C 34 5.59375 30.699219 2 24.5 2 Z M 20 7 C 21.101563 7 22 7.898438 22 9 C 22 10.101563 21.101563 11 20 11 C 18.898438 11 18 10.101563 18 9 C 18 7.898438 18.898438 7 20 7 Z M 35 15 L 35 22 C 35 24.199219 33.199219 26 31 26 L 19 26 C 17.300781 26 16 27.300781 16 29 L 16 40.90625 C 16 44.40625 19.300781 48 25.5 48 C 34.199219 48 36 43.507813 36 40.90625 L 36 36 L 26 36 L 26 35 L 40.90625 35 C 44.207031 35 48 32.398438 48 25 C 48 17.601563 44.207031 15 40.90625 15 Z M 30 39 C 31.101563 39 32 39.898438 32 41 C 32 42.101563 31.101563 43 30 43 C 28.898438 43 28 42.101563 28 41 C 28 39.898438 28.898438 39 30 39 Z"></path></svg>
+          <svg class="svg-inline--fa fa-python fa-w-14 fa-5x" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="python" role="img" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100px" height="100px" viewBox="0 0 448 512" data-fa-i2svg=""><path fill="currentColor" d="M439.8 200.5c-7.7-30.9-22.3-54.2-53.4-54.2h-40.1v47.4c0 36.8-31.2 67.8-66.8 67.8H172.7c-29.2 0-53.4 25-53.4 54.3v101.8c0 29 25.2 46 53.4 54.3 33.8 9.9 66.3 11.7 106.8 0 26.9-7.8 53.4-23.5 53.4-54.3v-40.7H226.2v-13.6h160.2c31.1 0 42.6-21.7 53.4-54.2 11.2-33.5 10.7-65.7 0-108.6zM286.2 404c11.1 0 20.1 9.1 20.1 20.3 0 11.3-9 20.4-20.1 20.4-11 0-20.1-9.2-20.1-20.4.1-11.3 9.1-20.3 20.1-20.3zM167.8 248.1h106.8c29.7 0 53.4-24.5 53.4-54.3V91.9c0-29-24.4-50.7-53.4-55.6-35.8-5.9-74.7-5.6-106.8.1-45.2 8-53.4 24.7-53.4 55.6v40.7h106.9v13.6h-147c-31.1 0-58.3 18.7-66.8 54.2-9.8 40.7-10.2 66.1 0 108.6 7.6 31.6 25.7 54.2 56.8 54.2H101v-48.8c0-35.3 30.5-66.4 66.8-66.4zm-6.7-142.6c-11.1 0-20.1-9.1-20.1-20.3.1-11.3 9-20.4 20.1-20.4 11 0 20.1 9.2 20.1 20.4s-9 20.3-20.1 20.3z"></path></svg>
           <figcaption>Python</figcaption>
         </figure>
         <figure data-aos="zoom-in">
@@ -150,7 +153,7 @@
           <figcaption>HTML</figcaption>
         </figure>
         <figure data-aos="slide-right">
-          <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100px" height="100px" viewBox="0 0 50 50" style=" fill:#000000;"><path d="M 43.335938 4 L 6.667969 4 C 5.195313 4 4 5.195313 4 6.667969 L 4 43.332031 C 4 44.804688 5.195313 46 6.667969 46 L 43.332031 46 C 44.804688 46 46 44.804688 46 43.335938 L 46 6.667969 C 46 5.195313 44.804688 4 43.335938 4 Z M 27 36.183594 C 27 40.179688 24.65625 42 21.234375 42 C 18.140625 42 15.910156 39.925781 15 38 L 18.144531 36.097656 C 18.75 37.171875 19.671875 38 21 38 C 22.269531 38 23 37.503906 23 35.574219 L 23 23 L 27 23 Z M 35.675781 42 C 32.132813 42 30.121094 40.214844 29 38 L 32 36 C 32.816406 37.335938 33.707031 38.613281 35.589844 38.613281 C 37.171875 38.613281 38 37.824219 38 36.730469 C 38 35.425781 37.140625 34.960938 35.402344 34.199219 L 34.449219 33.789063 C 31.695313 32.617188 29.863281 31.148438 29.863281 28.039063 C 29.863281 25.179688 32.046875 23 35.453125 23 C 37.878906 23 39.621094 23.84375 40.878906 26.054688 L 37.910156 27.964844 C 37.253906 26.789063 36.550781 26.328125 35.453125 26.328125 C 34.335938 26.328125 33.628906 27.039063 33.628906 27.964844 C 33.628906 29.109375 34.335938 29.570313 35.972656 30.28125 L 36.925781 30.691406 C 40.171875 32.078125 42 33.496094 42 36.683594 C 42 40.117188 39.300781 42 35.675781 42 Z"></path></svg>
+          <svg class="svg-inline--fa fa-js fa-w-14 fa-5x" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="js" role="img" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100px" height="100px" viewBox="0 0 448 512" data-fa-i2svg=""><path fill="currentColor" d="M0 32v448h448V32H0zm243.8 349.4c0 43.6-25.6 63.5-62.9 63.5-33.7 0-53.2-17.4-63.2-38.5l34.3-20.7c6.6 11.7 12.6 21.6 27.1 21.6 13.8 0 22.6-5.4 22.6-26.5V237.7h42.1v143.7zm99.6 63.5c-39.1 0-64.4-18.6-76.7-43l34.3-19.8c9 14.7 20.8 25.6 41.5 25.6 17.4 0 28.6-8.7 28.6-20.8 0-14.4-11.4-19.5-30.7-28l-10.5-4.5c-30.4-12.9-50.5-29.2-50.5-63.5 0-31.6 24.1-55.6 61.6-55.6 26.8 0 46 9.3 59.8 33.7L368 290c-7.2-12.9-15-18-27.1-18-12.3 0-20.1 7.8-20.1 18 0 12.6 7.8 17.7 25.9 25.6l10.5 4.5c35.8 15.3 55.9 31 55.9 66.2 0 37.8-29.8 58.6-69.7 58.6z"></path></svg>
           <figcaption>JavaScript</figcaption>
         </figure>
         <figure data-aos="slide-right">
@@ -187,13 +190,14 @@
             <div class="card-body">
 
               <div class="h5">
-                <h4 style="font-weight: 600">Consolidate multiple files dynamically</h4>
+                <a href="https://github.com/kevogil" style="font-weight: 600">Consolidate multiple files dynamically</a>
               </div>
 
               <div class="card-text">
                 <p> Evaluating and optimizing a neural network to predict successful charity funding applications using Deep Learning and hyperparameter tuning. </p>
-                <p><strong> Tools used</strong> &nbsp; : &nbsp; Excel, VBA</p>
-                <p><strong> Category</strong> &nbsp;: &nbsp; Macros, Automation</p>
+                <p><strong> Tools used</strong> &nbsp; : &nbsp; Python, Sklearn, Matplotlib, Neural Networks, Keras, Google Colab</p>
+                <p><strong> Category</strong> &nbsp;: &nbsp; Data Science, Machine Learning, Deep Learning, Optimization</p>
+                <p><strong> Year</strong> &nbsp; &nbsp; : &nbsp; Nov 2021</p>
               </div>
 
             </div>
@@ -215,13 +219,14 @@
             <div class="card-body">
 
               <div class="h5">
-                <h4 style="font-weight: 600">Send emails with customized parameters and attachments</h4>
+                <a href="https://github.com/kevogil" style="font-weight: 600">Send emails with customized parameters and attachments</a>
               </div>
 
               <div class="card-text">
                 <p> Evaluating and optimizing a neural network to predict successful charity funding applications using Deep Learning and hyperparameter tuning. </p>
-                <p><strong> Tools used</strong> &nbsp; : &nbsp; Excel, Outlook, VBA</p>
-                <p><strong> Category</strong> &nbsp;: &nbsp; Macros, Automation</p>
+                <p><strong> Tools used</strong> &nbsp; : &nbsp; Python, Sklearn, Matplotlib, Neural Networks, Keras, Google Colab</p>
+                <p><strong> Category</strong> &nbsp;: &nbsp; Data Science, Machine Learning, Deep Learning, Optimization</p>
+                <p><strong> Year</strong> &nbsp; &nbsp; : &nbsp; Nov 2021</p>
               </div>
 
             </div>
@@ -243,13 +248,14 @@
             <div class="card-body">
 
               <div class="h5">
-                <h4 style="font-weight: 600">Export Excel to Access and Power Query back to Excel</h4>
+                <a href="https://github.com/kevogil" style="font-weight: 600">Export Excel to Access and Power Query back to Excel</a>
               </div>
 
               <div class="card-text">
                 <p> Evaluating and optimizing a neural network to predict successful charity funding applications using Deep Learning and hyperparameter tuning. </p>
-                <p><strong> Tools used</strong> &nbsp; : &nbsp; Excel, Access, VBA, PowerQuery M</p>
-                <p><strong> Category</strong> &nbsp;: &nbsp; Macros, Automation, Database</p>
+                <p><strong> Tools used</strong> &nbsp; : &nbsp; Python, Sklearn, Matplotlib, Neural Networks, Keras, Google Colab</p>
+                <p><strong> Category</strong> &nbsp;: &nbsp; Data Science, Machine Learning, Deep Learning, Optimization</p>
+                <p><strong> Year</strong> &nbsp; &nbsp; : &nbsp; Nov 2021</p>
               </div>
 
             </div>
