--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
   <!-- Projects -->
   <div class="projects" id="projects">
-    <div class="container cc-experience">
+    <div class="container">
       <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
 
       <div class="h4 text-center mb-4 title">
