--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
   <!-- Projects -->
   <div class="projects" id="projects">
-    <div class="container cc-experience">
+    <div class="container">
       <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
 
       <div class="h4 text-center mb-4 title">
@@ -238,7 +238,7 @@
       <!-- Project 3 -->
       <div class="card">
         <div class="row">
-          <div class="col-md-7 bg-primary aos-init aos-animate" data-aos="zoom-out-right" data-aos-offset="50" data-aos-duration="500" style="background-image: url(&#39;static/images/database_model.gif&#39;); background-size: cover; background-repeat: no-repeat center center-fixed; overflow: hidden">
+          <div class="col-md-7 bg-primary aos-init aos-animate" data-aos="zoom-out-right" data-aos-offset="50" data-aos-duration="500" style="background-image: url(&#39;static/images/database_model.gif&#39;); background-size: cover; background-repeat: no-repeat center center-fixed; overflow: visible">
             <div class="card-body"></div>
           </div>
 
