--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
   <!-- About Me -->
   <div class="about-me" id="about-me">
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
-    <h2 class="me-white-text"">ABOUT ME</h2>
-    <p class="subtitle me-white-text">I am a Financial Analyst with five years of experience helping organizations solve problems and put their data to use. I enjoy mining and modeling data for insights with VBA, PowerQuery M, and Python.</p>
-    <p class="subtitle me-white-text">I have extensive experience in building financial models and automating processes for organizations across media, retail, and licensing industries. Driven and always curious, I love learning and tinkering around with new libraries and toolsets.</p>
+    <h2>ABOUT ME</h2>
+    <p class="subtitle">I am a Financial Analyst with five years of experience helping organizations solve problems and put their data to use. I enjoy mining and modeling data for insights with VBA, PowerQuery M, and Python.</p>
+    <p class="subtitle">I have extensive experience in building financial models and automating processes for organizations across media, retail, and licensing industries. Driven and always curious, I love learning and tinkering around with new libraries and toolsets.</p>
   </div>
   <!-- End About Me -->
 
