--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
     <h2>ABOUT ME</h2>
     <p class="subtitle">I am a Financial Analyst with six years of experience helping organizations solve problems and put their data to use. I enjoy mining and modeling data for insights with VBA, PowerQuery M, and Python.</p>
     <p class="subtitle">I have extensive experience in building financial models and automating processes for organizations across media, retail, and licensing industries. Driven and always curious, I love learning and tinkering around with new libraries and toolsets.</p>
-  </div><br><br><hr><br>
+    <br><br><br>
+  </div>
   <!-- End About Me -->
 
 
